renamed alt attributes

--- a/template_1.html
+++ b/template_1.html
@@ -38,7 +38,7 @@
 <!-- Save for Web Slices (template_1.psd) -->
 <div id="Table_01">
 	<div id="template-1-01">
-		<img src="images/template_1_01.jpg" alt="" width="1000" height="208" usemap="#Map">
+		<img src="images/template_1_01.jpg" alt="Head Banner" width="1000" height="208" usemap="#Map">
 	  <map name="Map">
 		  <area shape="rect" coords="135,154,279,208" href="#" alt="Home">
 		  <area shape="rect" coords="389,155,599,209" href="#" alt="Portfolio">
@@ -46,7 +46,7 @@
         </map>
   </div>
 	<div id="template-1-02">
-		<img src="images/template_1_02.gif" width="1000" height="492" alt="">
+		<img src="images/template_1_02.gif" width="1000" height="492" alt="Webpage">
 	</div>
 </div>
 <!-- End Save for Web Slices -->
